# federated

./: .gitignore  FINAL_RESEARCH_VALIDATION.md  FRONTEND_BUILD_PLAN.md  PHASE2_READINESS.md  PROJECT_ANALYSIS.md  README.md  RESEARCH_RESULTS_SUMMARY.md  RESULTS_SUMMARY.md  STEP1_COMPLETE_NEXT_STEPS.md  SYSTEMATIC_DEBUGGING_RESULTS.md  TODO.md  check_m.py  flex-persona-frontend.jsx  flex-persona-research-frontend.html  frontend_app.py  phase0_experimental_ground_truth.json  phase2_multiclient_results.json  preprocess_data.py  pyproject.toml  reproduce_all.sh  requirements.txt  sota_comparison_results.json
.azure/: FIX_TEST_PLAN.md  TEST_METRICS_GUIDE.md
.github/: copilot-instructions.md
artifacts/: completed.json  final_claim.json  success.json
configs/: global_config.json  phase0_corrected_config.json  run_schema.json
docs/: BLOCK_F_TODO.md  EXPERIMENT_STATUS.md  OPTIMIZER_PERSISTENCE_FIX.md  PHASE2_FEDERATION_VALIDATED.md  PROJECT_ANALYSIS.md  TECHNICAL_IMPROVEMENTS_SUMMARY.md  TODO.md  TWO_HOUR_EXPERIMENT_PROTOCOL.md  federated_experiment_audit.md
experiments/: comprehensive_10seed_results.json
flex_persona/: __init__.py
flex_persona.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
outputs/: analysis_output.txt  centralized_baseline.json  debug_moon_scaffold.json  debug_moon_scaffold_fixed.json  debug_moon_scaffold_no_norm.json  debug_moon_scaffold_v2.json  debug_moon_scaffold_v3.json  minimal_baseline_audit.json  quick_audit_log.txt  scaffold_control_signal_dump.json  scaffold_invariant_probe.json  scaffold_micro_test.json  scaffold_sign_ablation.json  (+5 more)
(+425 files in other folders)
