[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flex-persona"
version = "0.1.0"
description = "FLEX-Persona federated learning research framework"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "FLEX-Persona Research Team" }
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "matplotlib>=3.8",
  "torch>=2.2",
  "torchvision>=0.17",
  "POT>=0.9",
  "streamlit>=1.36"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["flex_persona*"]
